--- a/WebMVCLinhKienDienTu/WebMVCLinhKienDienTu/Web.config
+++ b/WebMVCLinhKienDienTu/WebMVCLinhKienDienTu/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebMVCLinhKienDienTu-20161217110813.mdf;Initial Catalog=aspnet-WebMVCLinhKienDienTu-20161217110813;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="QLLINHKIENEntities" connectionString="metadata=res://*/Models.DATA.csdl|res://*/Models.DATA.ssdl|res://*/Models.DATA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=QLLINHKIEN;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QLLINHKIENEntities1" connectionString="metadata=res://*/Models.Database.csdl|res://*/Models.Database.ssdl|res://*/Models.Database.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=QLLINHKIEN;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
