--- a/WebMVCLinhKienDienTu/WebMVCLinhKienDienTu/WebMVCLinhKienDienTu.csproj
+++ b/WebMVCLinhKienDienTu/WebMVCLinhKienDienTu/WebMVCLinhKienDienTu.csproj
@@ -248,6 +248,17 @@
     <Content Include="Views\Account\RegisterRole.cshtml" />
     <Content Include="Views\Account\DeleteRole.cshtml" />
     <Content Include="Views\Account\EditUser.cshtml" />
+    <Content Include="Views\Account\DetailUser.cshtml" />
+    <Content Include="Views\Account\ListUser.cshtml" />
+    <Content Include="Views\Account\ConfirmEmail.cshtml" />
+    <Content Include="Views\Account\ForgotPassword.cshtml" />
+    <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
+    <Content Include="Views\Account\ResetPassword.cshtml" />
+    <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
+    <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
+    <Content Include="Views\Account\SendCode.cshtml" />
+    <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
+    <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
