--- a/WebMVCLinhKienDienTu/WebMVCLinhKienDienTu/WebMVCLinhKienDienTu.csproj
+++ b/WebMVCLinhKienDienTu/WebMVCLinhKienDienTu/WebMVCLinhKienDienTu.csproj
@@ -273,10 +273,10 @@
     <Content Include="Views\Account\SendCode.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
     <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
-    <Content Include="Views\DONDATHANGs\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\DONDATHANGs\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
